// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowRightIcon: Component should render correctly 1`] = `
<arrow-right.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`ArrowRightIcon: Component should render with custom styles 1`] = `
<arrow-right.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
